2013-02-14  de390e0                  [RELEASE] Release of TYPO3 4.5.23 (TYPO3 Release Team)
2013-02-14  63a1e27                  [TASK] Raise submodule pointer (TYPO3 Release Team)
2013-02-09  c9ef82d  #24248          [BUGFIX] t3lib_iconWorks must check if array exists before using it (Jigal van Hemert)
2013-02-09  83f1185  #32686          [BUGFIX] BE user switch impossible when in adminOnly mode (Philipp Kitzberger)
2013-02-09  3d289da  #34460          [BUGFIX] Excludefieds must exclude admin only tables (Georg Ringer)
2013-02-09  6d006e2  #33214          [BUGFIX] TypoLink: absolute urls when installed in subfolder (Nils Seinschedt)
2013-02-08  50372c5                  [TASK] Raise submodule pointer (Christian Kuhn)
2013-02-07  6c8214e  #34129          [BUGFIX][Cache][PDO] Duplicate cache entry possible (Leon Dietsch)
2013-02-03  cf0fb91  #36364          [BUGFIX] IE9 compatibility clear cache menu (Andreas Kiessling)
2013-02-02  05d9084  #44416          [BUGFIX] Hook call modifyDBRow in ContentContentObject (Alina Fleser)
2013-02-02  6f5e19f  #43886          [BUGFIX] Fix misspelling in RTE meta menu (Tomita Militaru)
2013-02-02  b1a5a4b  #38505          [BUGFIX] load TCA before manipulation (Jigal van Hemert)
2013-01-31  05c879f  #45050          [TASK] DataHandler::getAutoVersionId() should be public (Oliver Hader)
2013-01-28  9c32684  #31027          [BUGFIX] Load date-time picker in scheduler module (Christian Kuhn)
2013-01-27  8ff08c4  #42845          [BUGFIX] Quick Edit triggers warnings of missing key uid (Philipp Gampe)
2013-01-27  d808455                  [TASK] Raise submodule pointer (Christian Kuhn)
2013-01-25  ede6862  #39680          [BUGFIX] Fix warnings in em on tab Maintenance (Philipp Gampe)
2013-01-25  1e0c188  #44145          [BUGFIX] Correct TCA inclusion for uploads rendering (Georg Ringer)
2013-01-24  2b64b11  #38240          [BUGFIX] Update description on changed error reporting defaults (Mario Rimann)