@@ -216,7 +216,6 @@ class t3lib_stdGraphic {
 	var $csConvObj;
 	var $nativeCharset = ''; // Is set to the native character set of the input strings.
 
-	protected $IMversion = 0; // ImageMagick Version Nummer formated like this 6000700070005
 
 	/**
 	 * Init function. Must always call this when using the class.
@@ -246,10 +245,6 @@ class t3lib_stdGraphic {
 			} elseif ($gfxConf['im_version_5'] === 'im5') {
 				t3lib_div::deprecationLog('The option $TYPO3_CONF_VARS[\'GFX\'][\'im_version_5\'] is set to \'im5\'. This is deprecated since TYPO3 4.5, support will be removed in TYPO3 4.6. Make sure to upgrade to ImageMagick version 6 or GraphichsMagick.');
 			}
-			$cmd = t3lib_div::imageMagickCommand('identify','-version | grep Version:');
-			$ret = explode(' ',t3lib_utility_Command::exec($cmd));
-			$ret = explode('.',str_replace('-','.',$ret[2]));
-			$this->IMversion = $ret[0].str_pad($ret[1],4,'0',STR_PAD_LEFT).str_pad($ret[2],4,'0',STR_PAD_LEFT).str_pad($ret[3],4,'0',STR_PAD_LEFT);
 		}
 
 			// When GIFBUILDER gets used in truecolor mode
@@ -260,7 +255,7 @@ class t3lib_stdGraphic {
 
 			// Setting default JPG parameters:
 		$this->jpegQuality = t3lib_div::intInRange($gfxConf['jpg_quality'], 10, 100, 75);
-		$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace ' . ( $this->IMversion >= 6000700050005 ? 's' : '' ) . 'RGB -sharpen 50 -quality ' . $this->jpegQuality;
+		$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace RGB -sharpen 50 -quality ' . $this->jpegQuality;
 
 		if ($gfxConf['im_combine_filename']) {
 			$this->combineScript = $gfxConf['im_combine_filename'];
@@ -299,7 +294,7 @@ class t3lib_stdGraphic {
 				// - therefore must be disabled in order not to perform sharpen, blurring and such.
 			$this->NO_IM_EFFECTS = 1;
 
-			$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace ' . ( $this->IMversion >= 6000700050005 ? 's' : '' ) . 'RGB -quality ' . $this->jpegQuality;
+			$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace RGB -quality ' . $this->jpegQuality;
 		}
 			// ... but if 'im_v5effects' is set, don't care about 'im_no_effects'
 		if ($gfxConf['im_v5effects']) {
@@ -307,7 +302,7 @@ class t3lib_stdGraphic {
 			$this->V5_EFFECTS = 1;
 
 			if ($gfxConf['im_v5effects'] > 0) {
-				$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace ' . ( $this->IMversion >= 6000700050005 ? 's' : '' ) . 'RGB -quality ' . intval($gfxConf['jpg_quality']) . $this->v5_sharpen(10);
+				$this->cmds['jpg'] = $this->cmds['jpeg'] = '-colorspace RGB -quality ' . intval($gfxConf['jpg_quality']) . $this->v5_sharpen(10);
 			}
 		}
 
