@@ -397,14 +397,9 @@ class tslib_feUserAuth extends t3lib_userAuth {
 		if ($this->userData_change)	{
 			$this->writeUC('');
 		}
-
-		if ($this->sesData_change && $this->id)	{
-			if (empty($this->sesData)) {
-				// Remove session-data
-				$this->removeSessionData();
-			} elseif ($this->sessionDataTimestamp === NULL) {
-					// Write new session-data
-				$insertFields = array(
+		if ($this->sesData_change)	{
+			if ($this->id)	{
+				$insertFields = array (
 					'hash' => $this->id,
 					'content' => serialize($this->sesData),
 					'tstamp' => $GLOBALS['EXEC_TIME'],
@@ -478,20 +473,12 @@ class tslib_feUserAuth extends t3lib_userAuth {
 			switch($type)	{
 				case 'user':
 					if ($this->user['uid'])	{
-						if ($data === NULL) {
-							unset($this->uc[$key]);
-						} else {
-							$this->uc[$key] = $data;
-						}
+						$this->uc[$key]=$data;
 						$this->userData_change=1;
 					}
 				break;
 				case 'ses':
-					if ($data === NULL) {
-						unset($this->sesData[$key]);
-					} else {
-						$this->sesData[$key] = $data;
-					}
+					$this->sesData[$key]=$data;
 					$this->sesData_change=1;
 				break;
 			}
